feat: ddo model, api, migration
aggiunto pure file di migrazione per device, device_model e device_model_group
