# src/api-specifications/api-spec.yml
@@ -1567,7 +1567,55 @@ paths:
                       $ref: '#/components/schemas/DDO'
                   pagination:
                     $ref: '#/components/schemas/PaginationData'
-                    
+        '404':
+          description: Device non trovato.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          $ref: '#/components/responses/InternalError'
+  
+  /devices/{deviceId}/ddos/sent:
+    parameters:
+      - name: deviceId
+        in: path
+        description: ID del device che ha inviato i DDO
+        required: true
+        schema:
+          type: integer
+          minimum: 0
+          example: 1
+    get:
+      description: Ritorna i ddo inviati dal device specificato
+      tags:
+        - devices
+        - DDOs
+      parameters:
+        - $ref: '#/components/parameters/offset'
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: Pagina di DDO e informazioni sulla paginazione
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/DDO'
+                  pagination:
+                    $ref: '#/components/schemas/PaginationData'
+        '404':
+          description: Device non trovato.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          $ref: '#/components/responses/InternalError'
 #region Device Models
   
   /device_models:
